--- a/src/app/Paginas/LadoAdmin/Productos/listado-productos/listado-productos.component.html
+++ b/src/app/Paginas/LadoAdmin/Productos/listado-productos/listado-productos.component.html
@@ -35,7 +35,7 @@
           <th mat-sort-header="medidaProducto" scope="col">MEDIDA</th>
           <th mat-sort-header="tipoProducto" scope="col">TIPO</th>
           <th mat-sort-header="precioBocha" scope="col">PRECIO</th>
-          <th scope="col">PRODUCTOS</th>
+          <th scope="col">FUNCIONES</th>
         </tr>
       </thead>
       <tbody>
