--- a/src/app/Paginas/LadoCliente/contacto/contacto.component.html
+++ b/src/app/Paginas/LadoCliente/contacto/contacto.component.html
@@ -79,7 +79,11 @@
 <div class="container">
     <div class="row">
         <div class="col-12 text-center">
-            <h1 class="TextWhite">UBICACIÓN</h1>
+            <h1 class="TextWhite">UBICACIÓN <a matTooltip="Ir a google maps"
+                    href="https://www.google.com/maps/dir//-31.6647198,-63.9097306/@-31.6643409,-63.9512747,13z/data=!3m1!4b1!4m2!4m1!3e0?hl=es">
+                    <i type="button" class="fa-regular fa-map"></i>
+                </a></h1>
+
         </div>
     </div>
     <div class="container-fluid p-3">
