--- a/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.html
+++ b/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.html
@@ -81,7 +81,7 @@
                 cuando se le dé el tratamiento adecuado.</p>
         </div>
         <div class="d-none d-lg-block col-md-12 col-lg-6 col-xl-6 mt-5 py-3">
-            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1680559070/FrancaSW/avenue-815297__480_f12sck.jpg"
+            <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1684378860/FrancaSW/sabia_que_curba_arriba_xdjmbt.png"
                 alt="descripcion-de-la-imagen" class="img-fluid">
         </div>
     </div>
@@ -122,12 +122,13 @@
         <div class="row">
             <small class="text-center TextWhite"><a class="TextWhite me-3" routerLink="/cliente/terminos">Términos y
                     Condiciones</a>
-                <small>|</small> <a class="TextWhite ms-3" routerLink="/cliente/ayuda">Ayuda</a></small>
+                <small>|</small>
+                <a class="TextWhite ms-3" routerLink="/cliente/ayuda">Ayuda</a>
+            </small>
         </div>
         <div class="row">
             <small class="text-center TextWhite lighter  mt-2 mb-2">Copyright © 2023 Bochas Franca SRL. Todos los
-                derechos
-                reservados.</small>
+                derechos reservados.</small>
         </div>
     </footer>
 </div>
