--- a/src/app/Paginas/LadoAdmin/OrdenesProduccion/alta-ordenes-produccion/alta-ordenes-produccion.component.html
+++ b/src/app/Paginas/LadoAdmin/OrdenesProduccion/alta-ordenes-produccion/alta-ordenes-produccion.component.html
@@ -5,16 +5,6 @@
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
                 <div class="form-group">
-                    <label for="">NÚMERO DE ORDEN</label>
-                    <input type="text" class="form-control" [(ngModel)]="ordenProd.numeroOrden" #numeroOrden="ngModel"
-                        name="numeroOrden" required placeholder="Ingrese el número de orden" pattern="[0-9]*" />
-                    <div *ngIf="numeroOrden.invalid && (numeroOrden.dirty || numeroOrden.touched)">
-                        <small class="text-danger">Por favor ingrese un número válido</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
-                <div class="form-group">
                     <label for="idUsuario">USUARIO</label>
                     <select name="idUsuario" id="idUsuario" class="form-select" [(ngModel)]="ordenProd.idUsuario"
                         #idUsuario="ngModel" required aria-label="Seleccione el usuario"
@@ -26,25 +16,6 @@
                     </select>
                     <div *ngIf="idUsuario.invalid && idUsuario.touched && !flag" class="text-danger">
                         Debe seleccionar un usuario.
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
-                <div class="form-group">
-                    <label for="idProducto">PRODUCTO</label>
-                    <select name="idProducto" id="idProducto" class="form-select" [(ngModel)]="ordenProd.idProducto"
-                        #idProducto="ngModel" required aria-label="Seleccione el producto"
-                        [ngClass]="{'ng-invalid': idProducto.invalid && idProducto.touched && !flag}">
-                        <option value="null" selected disabled>Seleccione el producto</option>
-                        <option value="{{prod.idProducto}}" *ngFor="let prod of nomProd">
-                            {{prod.nombre}}
-                        </option>
-                    </select>
-                    <div *ngIf="idProducto.invalid && idProducto.touched && !flag" class="text-danger">
-                        Debe seleccionar un producto.
                     </div>
                 </div>
             </div>
@@ -69,17 +40,17 @@
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
                 <div class="form-group">
-                    <label for="idEstadoOrdenProduccion">ESTADO</label>
-                    <select name="idEstadoOrdenProduccion" id="idEstadoOrdenProduccion" class="form-select" [(ngModel)]="ordenProd.idEstadoOrdenProduccion"
-                        #idEstadoOrdenProduccion="ngModel" required aria-label="Seleccione el estado"
-                        [ngClass]="{'ng-invalid': idEstadoOrdenProduccion.invalid && idEstadoOrdenProduccion.touched && !flag}">
-                        <option value="null" selected disabled>Seleccione el estado</option>
-                        <option value="{{e.idEstadoOrdenProduccion}}" *ngFor="let e of estado" >
-                            {{e.descripcion}}
+                    <label for="idProducto">PRODUCTO</label>
+                    <select name="idProducto" id="idProducto" class="form-select" [(ngModel)]="ordenProd.idProducto"
+                        #idProducto="ngModel" required aria-label="Seleccione el producto"
+                        [ngClass]="{'ng-invalid': idProducto.invalid && idProducto.touched && !flag}">
+                        <option value="null" selected disabled>Seleccione el producto</option>
+                        <option value="{{prod.idProducto}}" *ngFor="let prod of nomProd">
+                            {{prod.nombre}}
                         </option>
                     </select>
-                    <div *ngIf="idEstadoOrdenProduccion.invalid && idEstadoOrdenProduccion.touched && !flag" class="text-danger">
-                        Debe seleccionar un estado.
+                    <div *ngIf="idProducto.invalid && idProducto.touched && !flag" class="text-danger">
+                        Debe seleccionar un producto.
                     </div>
                 </div>
             </div>
@@ -87,20 +58,20 @@
                 <div class="form-group">
                     <label for="">CANTIDAD</label>
                     <input type="text" class="form-control" [(ngModel)]="ordenProd.cantidad" #cantidad="ngModel"
-                        name="cantidad" required placeholder="Ingrese la cantidad"  pattern="[0-9]*" />
+                        name="cantidad" required placeholder="Ingrese la cantidad" pattern="[0-9]*" />
                     <div *ngIf="cantidad.invalid && (cantidad.dirty || cantidad.touched)">
                         <small class="text-danger">Por favor ingrese una cantidad válida.</small>
                     </div>
                 </div>
             </div>
-        </div>
 
+        </div>
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
                 <div class="form-group">
                     <label for="fechaPedido">FECHA PEDIDO</label>
-                    <input type="date" class="form-control" name="fechaPedido"
-                        [(ngModel)]="ordenProd.fechaPedido" #fechaPedido="ngModel" required />
+                    <input type="date" class="form-control" name="fechaPedido" [(ngModel)]="ordenProd.fechaPedido"
+                        #fechaPedido="ngModel" required />
                     <div *ngIf="fechaPedido.invalid && (fechaPedido.dirty || fechaPedido.touched)">
                         <small class="text-danger">Por favor ingrese una fecha valida</small>
                     </div>
@@ -109,27 +80,48 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
                 <div class="form-group">
                     <label for="fechaEntrega">FECHA ENTREGA</label>
-                    <input type="date" class="form-control" name="fechaEntrega"
-                        [(ngModel)]="ordenProd.fechaEntrega" #fechaEntrega="ngModel" required />
+                    <input type="date" class="form-control" name="fechaEntrega" [(ngModel)]="ordenProd.fechaEntrega"
+                        #fechaEntrega="ngModel" required />
                     <div *ngIf="fechaEntrega.invalid && (fechaEntrega.dirty || fechaEntrega.touched)">
                         <small class="text-danger">Por favor ingrese una fecha valida</small>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
+                <div class="form-group">
+                    <label for="idEstadoOrdenProduccion">ESTADO</label>
+                    <select name="idEstadoOrdenProduccion" id="idEstadoOrdenProduccion" class="form-select"
+                        [(ngModel)]="ordenProd.idEstadoOrdenProduccion" #idEstadoOrdenProduccion="ngModel" required
+                        aria-label="Seleccione el estado"
+                        [ngClass]="{'ng-invalid': idEstadoOrdenProduccion.invalid && idEstadoOrdenProduccion.touched && !flag}">
+                        <option value="null" selected disabled>Seleccione el estado</option>
+                        <option value="{{e.idEstadoOrdenProduccion}}" *ngFor="let e of estado">
+                            {{e.descripcion}}
+                        </option>
+                    </select>
+                    <div *ngIf="idEstadoOrdenProduccion.invalid && idEstadoOrdenProduccion.touched && !flag"
+                        class="text-danger">
+                        Debe seleccionar un estado.
+                    </div>
+                </div>
+            </div>
+
+        </div>
         <div class="row py-4">
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-success" type="submit" id=""  matTooltip="Generar orden">GENERAR</button>
+                    <button class="btn btn-success" type="submit" id="" matTooltip="Generar orden">GENERAR</button>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-danger" (click)="Limpiar(this.f)"  matTooltip="Cancelar">CANCELAR</button>
+                    <button class="btn btn-danger" (click)="volver()" matTooltip="Cancelar">CANCELAR</button>
                 </div>
             </div>
             <div class="col-md-6 col-lg-6 text-center mt-3">
-                <i class="fa-solid fa-arrow-left icono" (click)="volver()"  matTooltip="Volver al listado"></i>
+                <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al listado"></i>
             </div>
         </div>
 
