--- a/src/app/Paginas/LadoAdmin/StockMateriaPrima/modificar-stock-materia-prima/modificar-stock-materia-prima.component.html
+++ b/src/app/Paginas/LadoAdmin/StockMateriaPrima/modificar-stock-materia-prima/modificar-stock-materia-prima.component.html
@@ -111,7 +111,7 @@
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-danger" (click)="Limpiar(this.f)" matTooltip="Cancelar">CANCELAR</button>
+                    <button class="btn btn-danger" (click)="volver()" matTooltip="Cancelar">CANCELAR</button>
                 </div>
             </div>
             <div class="col-md-6 col-lg-6 text-center mt-3">
