--- a/src/app/General/Barra/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/General/Barra/barra-navegacion/barra-navegacion.component.html
@@ -1,3 +1,4 @@
+<section id="barraNav">
 <nav class="navbar navbar-expand-lg shadow BackgroundAzul"
   [ngClass]="{ 'selected-item-pressed': selectedItem === 'home' && selectedItemsPressed }">
     <div class="container-fluid py-2">
@@ -128,3 +129,4 @@
         </div>
     </div>
 </nav>
+</section>
