--- a/src/app/Paginas/LadoAdmin/Clientes/listado-clientes/listado-clientes.component.html
+++ b/src/app/Paginas/LadoAdmin/Clientes/listado-clientes/listado-clientes.component.html
@@ -1,3 +1,8 @@
+<div class="floating-object" *ngIf="isNavVisible">
+    <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
+        <i class="fa-solid fa-arrow-up"></i>
+    </a>
+</div>
 <div class="container TextWhite rounded-2 ff mtt">
     <!-- <h1 class="text-center py-2">CLIENTE</h1>
     <hr />
