--- a/src/app/Paginas/LadoAdmin/Proveedores/listado-proveedor/listado-proveedor.component.html
+++ b/src/app/Paginas/LadoAdmin/Proveedores/listado-proveedor/listado-proveedor.component.html
@@ -1,3 +1,9 @@
+<div class="floating-object" *ngIf="isNavVisible">
+  <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
+      <i class="fa-solid fa-arrow-up"></i>
+  </a>
+</div>
+
 <div class="container TextWhite rounded-2 ff mtt">
   <!-- <h1 class="text-center py-2">PROVEEDORES</h1>
   <hr />
