--- a/src/app/Paginas/LadoCliente/Soporte/ayuda/ayuda.component.html
+++ b/src/app/Paginas/LadoCliente/Soporte/ayuda/ayuda.component.html
@@ -1,4 +1,10 @@
-<div class="TextWhite container">
+<div class="floating-object" *ngIf="isNavVisible">
+    <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
+        <i class="fa-solid fa-arrow-up"></i>
+    </a>
+</div>
+
+<div class="TextWhite container py-3">
 
     <div class="row mt-5 text-start">
         <div class="col-12 col-sm-12 col-md-9 col-lg-9">
