--- a/src/app/Paginas/LadoCliente/Soporte/terminos/terminos.component.html
+++ b/src/app/Paginas/LadoCliente/Soporte/terminos/terminos.component.html
@@ -1,3 +1,8 @@
+<div class="floating-object" *ngIf="isNavVisible">
+    <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
+        <i class="fa-solid fa-arrow-up"></i>
+    </a>
+</div>
 <div class="TextWhite container">
 
     <div class="row mt-5 text-start">
