--- a/src/app/Paginas/LadoCliente/contacto/contacto.component.html
+++ b/src/app/Paginas/LadoCliente/contacto/contacto.component.html
@@ -2,6 +2,11 @@
     <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1680536147/FrancaSW/My_project-1_1_browzy.png"
         class="d-block w-100" alt="...">
 </div> -->
+<div class="floating-object" *ngIf="isNavVisible">
+    <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
+        <i class="fa-solid fa-arrow-up"></i>
+    </a>
+</div>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 280">
     <path fill="#1b345d" fill-opacity="1"
         d="M0,224L80,224C160,224,320,224,480,192C640,160,800,96,960,106.7C1120,117,1280,203,1360,245.3L1440,288L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
@@ -79,8 +84,9 @@
 <div class="container">
     <div class="row">
         <div class="col-12 text-center">
-            <h1 class="TextWhite">UBICACIÓN <a matTooltip="Ir a google maps"
-                    href="https://www.google.com/maps/dir//-31.6647198,-63.9097306/@-31.6643409,-63.9512747,13z/data=!3m1!4b1!4m2!4m1!3e0?hl=es">
+            <h1 class="TextWhite">UBICACIÓN <a matTooltip="Ir a Google Maps"
+                    href="https://www.google.com/maps/dir//-31.6647198,-63.9097306/@-31.6643409,-63.9512747,13z/data=!3m1!4b1!4m2!4m1!3e0?hl=es"
+                    target="_blank">
                     <i type="button" class="fa-regular fa-map"></i>
                 </a></h1>
 
