--- a/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.html
+++ b/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.html
@@ -1,3 +1,9 @@
+<div class="floating-object" *ngIf="isNavVisible">
+    <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
+        <i class="fa-solid fa-arrow-up"></i>
+    </a>
+</div>
+
 <div id="carouselExampleInterval" class="carousel slide " data-bs-ride="carousel">
 
     <div class="carousel-inner">
