--- a/src/app/General/Barra/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/General/Barra/barra-navegacion/barra-navegacion.component.html
@@ -104,7 +104,7 @@
 
             <ul class="navbar-nav mb-2 mb-lg-0 me-5 dropdown-menu-start" *ngIf="!this.userHasRole(['Adm'])">
                 <li class="nav-item dropdown fuente fixed-end">
-                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                    <a class="nav-link  active" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false" [ngClass]="{ 'selected-item': selectedItem === 'p' }"
                         (click)="isNavbarCollapsed = true; selectedItem = 'p';deselectedItemPressed();">
                         <i class="fa-solid fa-user icono" [ngClass]="{ 'selected-item': selectedItem === 'p' }"
@@ -115,7 +115,7 @@
 
             <ul class="navbar-nav mb-2 mb-lg-0 me-5 dropdown-menu-start" *ngIf="this.userHasRole(['Adm'])">
                 <li class="nav-item dropdown fuente fixed-end">
-                    <a class="nav-link dropdown-toggle active ICONO2" href="" role="button" data-bs-toggle="dropdown"
+                    <a class="nav-link  active ICONO2" href="" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         <i class="fa-solid fa-user icono"></i>
                     </a>
