--- a/src/app/Paginas/LadoAdmin/Productos/listado-productos/listado-productos.component.html
+++ b/src/app/Paginas/LadoAdmin/Productos/listado-productos/listado-productos.component.html
@@ -1,8 +1,9 @@
 <div class="floating-object" *ngIf="isNavVisible">
   <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
-      <i class="fa-solid fa-arrow-up"></i>
+      <i class="fa-solid fa-circle-chevron-up"></i>
   </a>
 </div>
+
 <div class="container TextWhite rounded-2 ff mtt">
   <div class="row">
     <div class="col-4 col-sm-4 col-md-3 col-lg-3">
