--- a/src/app/Paginas/LadoAdmin/StockProducto/listado-stock-producto/listado-stock-producto.component.html
+++ b/src/app/Paginas/LadoAdmin/StockProducto/listado-stock-producto/listado-stock-producto.component.html
@@ -1,8 +1,9 @@
 <div class="floating-object" *ngIf="isNavVisible">
     <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
-        <i class="fa-solid fa-arrow-up"></i>
+        <i class="fa-solid fa-circle-chevron-up"></i>
     </a>
 </div>
+
 <div class="container TextWhite rounded-2 ff mtt">
     <div class="row">
         <div class="col-8 col-sm-5 col-md-5 col-lg-5">
