--- a/src/app/Paginas/LadoAdmin/inicio-administrador/inicio-administrador.component.html
+++ b/src/app/Paginas/LadoAdmin/inicio-administrador/inicio-administrador.component.html
@@ -1,6 +1,6 @@
 <div class="floating-object" *ngIf="isNavVisible">
     <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
-        <i class="fa-solid fa-arrow-up"></i>
+        <i class="fa-solid fa-circle-chevron-up"></i>
     </a>
 </div>
 
