--- a/src/app/Paginas/LadoCliente/Soporte/terminos/terminos.component.html
+++ b/src/app/Paginas/LadoCliente/Soporte/terminos/terminos.component.html
@@ -1,8 +1,13 @@
 <div class="floating-object" *ngIf="isNavVisible">
     <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
-        <i class="fa-solid fa-arrow-up"></i>
+        <i class="fa-solid fa-circle-chevron-up"></i>
     </a>
 </div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 120">
+    <path fill="#ffffff" fill-opacity="1"
+        d="M0,128L120,117.3C240,107,480,85,720,90.7C960,96,1200,128,1320,144L1440,160L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z">
+    </path>
+</svg>
 <div class="TextWhite container">
 
     <div class="row mt-5 text-start">
@@ -114,7 +119,7 @@
     </div>
 </div>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-    <path fill="#1b345d" fill-opacity="1"
+    <path fill="#ffffff" fill-opacity="1"
         d="M0,96L120,122.7C240,149,480,203,720,218.7C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z">
     </path>
 </svg>
