--- a/src/app/Paginas/LadoCliente/catalogo/catalogo.component.html
+++ b/src/app/Paginas/LadoCliente/catalogo/catalogo.component.html
@@ -1,8 +1,9 @@
 <div class="floating-object" *ngIf="isNavVisible">
     <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
-        <i class="fa-solid fa-arrow-up"></i>
+        <i class="fa-solid fa-circle-chevron-up"></i>
     </a>
 </div>
+
 <div class="container mt-4 mb-5 rounded-2 BackgroundAzulCard shadow-lg">
     <div class="row py-2 mtc-5 mb-2" style="text-align: center">
         <label class="mb-2 TextWhite text-start" for="">BUSCAR PRODUCTO</label>
