--- a/src/app/Paginas/LadoCliente/contacto/contacto.component.html
+++ b/src/app/Paginas/LadoCliente/contacto/contacto.component.html
@@ -4,9 +4,10 @@
 </div> -->
 <div class="floating-object" *ngIf="isNavVisible">
     <a class="nav-link TextWhite iconoFlecha" (click)="onClickNavLink('barraNav')" matTooltip="Subir">
-        <i class="fa-solid fa-arrow-up"></i>
+        <i class="fa-solid fa-circle-chevron-up"></i>
     </a>
 </div>
+
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 280">
     <path fill="#1b345d" fill-opacity="1"
         d="M0,224L80,224C160,224,320,224,480,192C640,160,800,96,960,106.7C1120,117,1280,203,1360,245.3L1440,288L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
