--- a/src/app/Seguridad/Login/login/login.component.html
+++ b/src/app/Seguridad/Login/login/login.component.html
@@ -28,7 +28,7 @@
                                 matTooltip="Iniciar sesión">INICIAR SESIÓN</button>
                         </div>
                         <div class="d-flex py-3 mt-2 mb-2 justify-content-center">
-                            <i class="fa-solid fa-arrow-left icono flechaAzul" routerLink="" type="button"
+                            <i class="fa-solid fa-circle-chevron-left icono flechaAzul" routerLink="" type="button"
                                 matTooltip="Volver al inicio"></i>
                         </div>
                     </form>
